[workspace]
default-members = ["static-http"]

members = ["http", "static-http"]

[workspace.package]
version = "0.1.0"
authors = ["Lance Hart <me@lancehart>"]
edition = "2021"
repository = "https://github.com/shipsimfan/huntsman.git"
license = "GPL-3.0-or-later"
publish = false

[package]
name = "huntsman"
version.workspace = true
description = "A library for running servers"

authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
