[workspace]
default-members = ["static-http"]

members = ["http", "static-http"]

[workspace.package]
version = "0.1.0"
authors = ["Lance Hart <me@lancehart>"]
edition = "2021"
repository = "https://github.com/shipsimfan/huntsman.git"
license = "GPL-3.0-or-later"
publish = false

[workspace.dependencies]
lasync.git = "https://github.com/shipsimfan/lib-lasync"

[package]
name = "huntsman"
description = "A library for running servers"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lasync.workspace = true
