[package]
name = "huntsman-static-http"
description = "A huntsman server which serves static pages over HTTP"

version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
lasync.workspace = true

huntsman.path = ".."
huntsman-http.path = "../http"

argparse = { git = "https://github.com/shipsimfan/lib-argparse", branch = "feature/config-file" }
oak.git = "https://github.com/shipsimfan/oak"
